@@ -3,14 +3,15 @@ package faang.school.projectservice.service.vacancy;
 import faang.school.projectservice.config.context.UserContext;
 import faang.school.projectservice.dto.vacancy.CandidateCreateDto;
 import faang.school.projectservice.dto.vacancy.CandidateDto;
+import faang.school.projectservice.dto.vacancy.SearchDto;
 import faang.school.projectservice.dto.vacancy.VacancyCreateDto;
 import faang.school.projectservice.dto.vacancy.VacancyDto;
 import faang.school.projectservice.dto.vacancy.VacancyUpdateDto;
+import faang.school.projectservice.mapper.vacancy.CandidateMapper;
 import faang.school.projectservice.mapper.vacancy.VacancyMapper;
 import faang.school.projectservice.model.Candidate;
 import faang.school.projectservice.model.CandidateStatus;
 import faang.school.projectservice.model.Project;
-import faang.school.projectservice.model.Team;
 import faang.school.projectservice.model.TeamMember;
 import faang.school.projectservice.model.TeamRole;
 import faang.school.projectservice.model.Vacancy;
@@ -23,21 +24,30 @@ import faang.school.projectservice.validator.vacancy.VacancyValidator;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mapstruct.factory.Mappers;
+import org.mockito.ArgumentCaptor;
+import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Example;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
+
 
 @ExtendWith(MockitoExtension.class)
 public class VacancyServiceTest {
@@ -49,388 +59,242 @@ public class VacancyServiceTest {
     private ProjectRepository projectRepository;
 
     @Mock
-    private UserContext userContext;
-
-    @Mock
-    private VacancyMapper vacancyMapper;
-
-    @Mock
-    private VacancyValidator vacancyValidator;
-
-    @Mock
     private TeamMemberRepository teamMemberRepository;
 
     @Mock
     private CandidateRepository candidateRepository;
 
+    @Mock
+    private UserContext userContext;
+
+    @Spy
+    private VacancyMapper vacancyMapper = Mappers.getMapper(VacancyMapper.class);
+
+    @Spy
+    private CandidateMapper candidateMapper = Mappers.getMapper(CandidateMapper.class);
+
+    @Spy
+    private VacancyValidator vacancyValidator;
+
+    @Mock
+    private TeamMemberService teamMemberService;
+
     @InjectMocks
     private VacancyService vacancyService;
 
-    private VacancyCreateDto vacancyCreateDto;
+    @Captor
+    private ArgumentCaptor<Vacancy> vacancyCaptor;
+
     private Vacancy vacancy;
-    private VacancyDto vacancyDto;
     private Project project;
-    private VacancyUpdateDto vacancyUpdateDto;
-    private TeamMember teamMember;
+    private TeamMember author;
     private Candidate candidate;
-    private CandidateCreateDto candidateCreateDto;
-    private CandidateDto candidateDto;
 
     @BeforeEach
     void setUp() {
-        vacancyCreateDto = new VacancyCreateDto(
-                1L,
-                "Java Developer needed",
-                TeamRole.DEVELOPER,
-                3,
-                "123"
-        );
-
         project = Project.builder()
                 .id(1L)
                 .name("Test Project")
                 .teams(new ArrayList<>())
                 .build();
 
-        Team team = Team.builder()
+        author = TeamMember.builder()
                 .id(1L)
-                .project(project)
-                .teamMembers(new ArrayList<>())
+                .userId(100L)
+                .roles(List.of(TeamRole.OWNER))
                 .build();
-        project.getTeams().add(team);
+
+        List<Candidate> candidates = new ArrayList<>();
+        List<Candidate> acceptedCandidates = new ArrayList<>();
 
         vacancy = Vacancy.builder()
                 .id(1L)
                 .name("Java Developer")
-                .description("Java Developer needed")
+                .description("Looking for experienced Java developer")
                 .position(TeamRole.DEVELOPER)
                 .project(project)
-                .status(VacancyStatus.OPEN)
                 .count(3)
-                .candidates(new ArrayList<>())
-                .acceptedCandidates(new ArrayList<>())
-                .build();
-
-        vacancyDto = new VacancyDto(
-                1L,
-                "Java Developer needed",
-                TeamRole.DEVELOPER,
-                3,
-                VacancyStatus.OPEN,
-                null
-        );
-
-        vacancyUpdateDto = new VacancyUpdateDto(
-                "Updated description",
-                TeamRole.MANAGER,
-                5
-        );
-
-        teamMember = TeamMember.builder()
-                .id(1L)
-                .userId(123L)
-                .nickname("Test User")
-                .roles(List.of(TeamRole.MANAGER))
+                .candidates(candidates)
+                .acceptedCandidates(acceptedCandidates)
                 .build();
 
         candidate = Candidate.builder()
                 .id(1L)
-                .userId(456L)
-                .username("Candidate User")
+                .userId(200L)
+                .username("candidate1")
                 .candidateStatus(CandidateStatus.WAITING_RESPONSE)
                 .isAccepted(false)
-                .vacancy(vacancy)
                 .build();
 
-        candidateCreateDto = new CandidateCreateDto(
-                456L, // userId кандидата
-                "Candidate User",
-                "Java Developer"
-        );
-
-        candidateDto = new CandidateDto(
-                1L, // candidateId
-                "Candidate User",
-                "Java Developer"
-        );
-
-        // Add team member to project team
-        project.getTeams().get(0).getTeamMembers().add(teamMember);
+        vacancy.setCandidates(List.of(candidate));
     }
 
     @Test
-    void createVacancySuccess() {
+    void createVacancyValidDataShouldCreateVacancy() {
 
-        when(userContext.getUserId()).thenReturn(123L);
-        when(teamMemberRepository.findByUserIdAndProjectId(123L, 1L)).thenReturn(teamMember);
-        when(projectRepository.getByIdOrThrow(1L)).thenReturn(project);
-        when(vacancyMapper.toVacancy(vacancyCreateDto)).thenReturn(vacancy);
-        when(vacancyRepository.save(vacancy)).thenReturn(vacancy);
-        when(vacancyMapper.toVacancyDto(vacancy)).thenReturn(vacancyDto);
+        VacancyCreateDto vacancyCreateDto = new VacancyCreateDto(
+                1L,
+                "Looking for experienced Java developer",
+                TeamRole.DEVELOPER,
+                3,
+                "Java Developer"
+        );
+        Project project1 = projectRepository.getByIdOrThrow(vacancyCreateDto.projectId());
+        when(teamMemberRepository.findByUserIdAndProjectId(anyLong(), anyLong())).thenReturn(author);
+        when(vacancyMapper.toVacancy(vacancyCreateDto, project1))
+                .thenAnswer(invocation -> {
+                    return Vacancy.builder()
+                            .name(vacancyCreateDto.name())
+                            .description(vacancyCreateDto.description())
+                            .position(vacancyCreateDto.position())
+                            .count(vacancyCreateDto.count())
+                            .project(project)
+                            .candidates(new ArrayList<>())
+                            .acceptedCandidates(new ArrayList<>())
+                            .build();
+                });
+        when(vacancyRepository.save(any(Vacancy.class))).thenReturn(vacancy);
 
         VacancyDto result = vacancyService.createVacancy(vacancyCreateDto);
 
         assertNotNull(result);
-        assertEquals(vacancyDto, result);
-        verify(vacancyValidator).validateRole(teamMember);
-        verify(vacancyRepository).save(vacancy);
+        assertEquals(vacancy.getName(), result.name());
+        verify(vacancyRepository).save(vacancyCaptor.capture());
+        assertEquals(vacancyCreateDto.name(), vacancyCaptor.getValue().getName());
     }
 
     @Test
-    void updateVacancySuccess() {
+    void updateVacancyValidDataShouldUpdateVacancy() {
 
-        when(userContext.getUserId()).thenReturn(123L);
+        VacancyUpdateDto updateDto = new VacancyUpdateDto(
+                "Updated Java Developer",
+                "Updated description",
+                TeamRole.DEVELOPER,
+                5
+        );
+
         when(vacancyRepository.getByIdOrThrow(1L)).thenReturn(vacancy);
-        when(teamMemberRepository.findByUserIdAndProjectId(123L, 1L)).thenReturn(teamMember);
-        when(vacancyRepository.save(vacancy)).thenReturn(vacancy);
-        when(vacancyMapper.toVacancyDto(vacancy)).thenReturn(vacancyDto);
+        when(teamMemberRepository.findByUserIdAndProjectId(anyLong(), anyLong())).thenReturn(author);
+        when(vacancyRepository.save(any(Vacancy.class))).thenReturn(vacancy);
 
-        VacancyDto result = vacancyService.updateVacancy(1L, vacancyUpdateDto);
+        VacancyDto result = vacancyService.updateVacancy(1L, updateDto);
 
         assertNotNull(result);
-        assertEquals(vacancyDto, result);
-        verify(vacancyValidator).validateRole(teamMember);
-        verify(vacancyMapper).updateVacancyFromDto(vacancyUpdateDto, vacancy);
-        verify(vacancyRepository).save(vacancy);
+        verify(vacancyRepository).save(vacancyCaptor.capture());
+        assertEquals(updateDto.name(), vacancyCaptor.getValue().getName());
+        assertEquals(updateDto.description(), vacancyCaptor.getValue().getDescription());
     }
 
     @Test
-    void addCandidatesToVacancySuccess() {
+    void addCandidatesToVacancyValidDataShouldAddCandidate() {
 
-        vacancy.setCandidates(new ArrayList<>());
-        when(userContext.getUserId()).thenReturn(123L);
-        when(vacancyRepository.getByIdOrThrow(1L)).thenReturn(vacancy);
-        when(teamMemberRepository.findByUserIdAndProjectId(123L, 1L)).thenReturn(teamMember);
-        when(vacancyMapper.toCandidate(candidateCreateDto)).thenReturn(candidate);
-        when(vacancyRepository.save(vacancy)).thenReturn(vacancy);
-        when(vacancyMapper.toVacancyDto(vacancy)).thenReturn(vacancyDto);
+        CandidateCreateDto candidateDto = new CandidateCreateDto(
+                20L,
+                "candidate2",
+                "resume123",
+                "Cover letter"
+        );
 
-        VacancyDto result = vacancyService.addCandidatesToVacancy(1L, candidateCreateDto);
-
-        assertNotNull(result);
-        assertEquals(vacancyDto, result);
-        assertTrue(vacancy.getCandidates().contains(candidate));
-        verify(vacancyValidator).validateRole(teamMember);
-        verify(vacancyRepository).save(vacancy);
-    }
-
-    @Test
-    void addCandidatesToVacancyWhenVacancyClosedThrowsException() {
-
-        vacancy.setStatus(VacancyStatus.CLOSED);
-        when(userContext.getUserId()).thenReturn(123L);
-        when(vacancyRepository.getByIdOrThrow(1L)).thenReturn(vacancy);
-        when(teamMemberRepository.findByUserIdAndProjectId(123L, 1L)).thenReturn(teamMember);
-
-        assertThrows(IllegalStateException.class,
-                () -> vacancyService.addCandidatesToVacancy(1L, candidateCreateDto));
-    }
-
-    @Test
-    void addCandidatesToVacancyWhenCandidateIsProjectMemberThrowsException() {
-
-        TeamMember existingMember = TeamMember.builder()
-                .userId(456L) // Same as candidate userId
+        Candidate newCandidate = Candidate.builder()
+                .userId(20L)
+                .username("candidate2")
+                .resumeDocKey("resume123")
+                .coverLetter("Cover letter")
                 .build();
-        project.getTeams().get(0).getTeamMembers().add(existingMember);
 
-        when(userContext.getUserId()).thenReturn(123L);
         when(vacancyRepository.getByIdOrThrow(1L)).thenReturn(vacancy);
-        when(teamMemberRepository.findByUserIdAndProjectId(123L, 1L)).thenReturn(teamMember);
+        when(teamMemberRepository.findByUserIdAndProjectId(anyLong(), anyLong())).thenReturn(author);
+        when(candidateMapper.toCandidate(candidateDto)).thenReturn(newCandidate);
+        when(vacancyRepository.save(any(Vacancy.class))).thenReturn(vacancy);
 
-        assertThrows(IllegalArgumentException.class,
-                () -> vacancyService.addCandidatesToVacancy(1L, candidateCreateDto));
-    }
-
-    @Test
-    void addCandidatesToVacancyWhenCandidateAlreadyAddedThrowsException() {
-
-        vacancy.getCandidates().add(candidate); // candidate имеет userId = 456L
-        when(userContext.getUserId()).thenReturn(123L);
-        when(vacancyRepository.getByIdOrThrow(1L)).thenReturn(vacancy);
-        when(teamMemberRepository.findByUserIdAndProjectId(123L, 1L)).thenReturn(teamMember);
-
-        assertThrows(IllegalArgumentException.class,
-                () -> vacancyService.addCandidatesToVacancy(1L, candidateCreateDto));
-    }
-
-    @Test
-    void acceptCandidateSuccess() {
-
-        vacancy.getCandidates().add(candidate);
-        when(userContext.getUserId()).thenReturn(123L);
-        when(vacancyRepository.getByIdOrThrow(1L)).thenReturn(vacancy);
-        when(teamMemberRepository.findByUserIdAndProjectId(123L, 1L)).thenReturn(teamMember);
-        when(vacancyMapper.toCandidateDto(candidate)).thenReturn(candidateDto);
-
-        CandidateDto result = vacancyService.acceptCandidate(1L, 1L);
+        VacancyDto result = vacancyService.addCandidatesToVacancy(1L, candidateDto);
 
         assertNotNull(result);
-        assertEquals(candidateDto, result);
-        assertEquals(CandidateStatus.ACCEPTED, candidate.getCandidateStatus());
-        assertTrue(candidate.getIsAccepted());
-        verify(vacancyRepository).save(vacancy);
+        verify(vacancyRepository).save(vacancyCaptor.capture());
+        assertEquals(2, vacancyCaptor.getValue().getCandidates().size());
     }
 
     @Test
-    void acceptCandidateWhenCandidateNotFoundThrowsException() {
+    void updateCandidateStatusValidDataShouldUpdateStatus() {
 
-        vacancy.getCandidates().add(candidate); // Добавляем кандидата с id = 1L
-        when(userContext.getUserId()).thenReturn(123L);
         when(vacancyRepository.getByIdOrThrow(1L)).thenReturn(vacancy);
-        when(teamMemberRepository.findByUserIdAndProjectId(123L, 1L)).thenReturn(teamMember);
+        when(teamMemberRepository.findByUserIdAndProjectId(anyLong(), anyLong())).thenReturn(author);
 
-        //  ищем кандидата с несуществующим id
-        assertThrows(IllegalArgumentException.class,
-                () -> vacancyService.acceptCandidate(1L, 999L));
-    }
-
-    @Test
-    void acceptCandidateWhenCandidateAlreadyAcceptedThrowsException() {
-
-        candidate.setCandidateStatus(CandidateStatus.ACCEPTED);
-        candidate.setIsAccepted(true);
-        vacancy.getAcceptedCandidates().add(candidate);
-        vacancy.getCandidates().add(candidate);
-
-        when(userContext.getUserId()).thenReturn(123L);
-        when(vacancyRepository.getByIdOrThrow(1L)).thenReturn(vacancy);
-        when(teamMemberRepository.findByUserIdAndProjectId(123L, 1L)).thenReturn(teamMember);
-
-        assertThrows(IllegalStateException.class,
-                () -> vacancyService.acceptCandidate(1L, 1L));
-    }
-
-    @Test
-    void rejectCandidateSuccess() {
-
-        vacancy.getCandidates().add(candidate);
-        when(userContext.getUserId()).thenReturn(123L);
-        when(vacancyRepository.getByIdOrThrow(1L)).thenReturn(vacancy);
-        when(teamMemberRepository.findByUserIdAndProjectId(123L, 1L)).thenReturn(teamMember);
-        when(vacancyMapper.toCandidateDto(candidate)).thenReturn(candidateDto);
-
-        CandidateDto result = vacancyService.rejectCandidate(1L, 1L);
+        CandidateDto result = vacancyService.updateCandidateStatus(1L, 1L, CandidateStatus.ACCEPTED);
 
         assertNotNull(result);
-        assertEquals(candidateDto, result);
-        assertEquals(CandidateStatus.REJECTED, candidate.getCandidateStatus());
-        assertFalse(candidate.getIsAccepted());
-        verify(vacancyRepository).save(vacancy);
+        assertEquals(CandidateStatus.ACCEPTED, result.candidateStatus());
+        assertTrue(result.isAccepted());
     }
 
     @Test
-    void waitingResponseSuccess() {
+    void closeVacancyValidDataShouldCloseVacancy() {
+        List<Candidate> acceptedCandidate = new ArrayList<>();
+        for (int i = 0; i < vacancy.getCount(); i++) {
+            Candidate acceptCandidate = Candidate.builder()
+                    .id((long) (i + 1))
+                    .userId(200L + i)
+                    .username("candidate" + i)
+                    .candidateStatus(CandidateStatus.ACCEPTED)
+                    .isAccepted(true)
+                    .vacancy(vacancy)
+                    .build();
+            acceptedCandidate.add(acceptCandidate);
+        }
 
-        vacancy.getCandidates().add(candidate);
-        when(userContext.getUserId()).thenReturn(123L);
+        vacancy.setAcceptedCandidates(acceptedCandidate);
+        vacancy.setStatus(VacancyStatus.OPEN);
+
         when(vacancyRepository.getByIdOrThrow(1L)).thenReturn(vacancy);
-        when(teamMemberRepository.findByUserIdAndProjectId(123L, 1L)).thenReturn(teamMember);
-        when(vacancyMapper.toCandidateDto(candidate)).thenReturn(candidateDto);
-
-        CandidateDto result = vacancyService.waitingResponse(1L, 1L);
-
-        assertNotNull(result);
-        assertEquals(candidateDto, result);
-        assertEquals(CandidateStatus.WAITING_RESPONSE, candidate.getCandidateStatus());
-        assertFalse(candidate.getIsAccepted());
-        verify(vacancyRepository).save(vacancy);
-    }
-
-    @Test
-    void closeVacancySuccess() {
-
-        Candidate acceptedCandidate = Candidate.builder()
-                .id(2L)
-                .userId(789L)
-                .candidateStatus(CandidateStatus.ACCEPTED)
-                .isAccepted(true)
-                .build();
-        vacancy.getAcceptedCandidates().add(acceptedCandidate);
-        vacancy.setCount(1); // Only need 1 candidate
-
-        when(userContext.getUserId()).thenReturn(123L);
-        when(vacancyRepository.getByIdOrThrow(1L)).thenReturn(vacancy);
-        when(teamMemberRepository.findByUserIdAndProjectId(123L, 1L)).thenReturn(teamMember);
-        when(vacancyMapper.toVacancyDto(vacancy)).thenReturn(vacancyDto);
+        when(teamMemberRepository.findByUserIdAndProjectId(anyLong(), anyLong())).thenReturn(author);
+        when(vacancyMapper.toVacancyDto(vacancy)).thenReturn(new VacancyDto(
+                1L, "Java Developer", null, null, 3, VacancyStatus.OPEN, null
+        ));
 
         VacancyDto result = vacancyService.closeVacancy(1L);
 
         assertNotNull(result);
-        assertEquals(VacancyStatus.CLOSED, vacancy.getStatus());
-        assertEquals(vacancyDto, result);
+        verify(vacancyRepository).save(vacancyCaptor.capture());
+        assertEquals(vacancyCaptor.getValue().getStatus(), VacancyStatus.CLOSED);
     }
 
     @Test
-    void closeVacancyWhenNotEnoughCandidatesThrowsException() {
-
-        vacancy.setCount(3);
-        vacancy.getAcceptedCandidates().clear(); // No accepted candidates
-
-        when(userContext.getUserId()).thenReturn(123L);
-        when(vacancyRepository.getByIdOrThrow(1L)).thenReturn(vacancy);
-        when(teamMemberRepository.findByUserIdAndProjectId(123L, 1L)).thenReturn(teamMember);
-
-        assertThrows(IllegalStateException.class,
-                () -> vacancyService.closeVacancy(1L));
-    }
-
-    @Test
-    void getVacancySuccess() {
+    void getVacancyExistingIdShouldReturnVacancy() {
 
         when(vacancyRepository.getWithCandidatesOrThrow(1L)).thenReturn(vacancy);
-        when(vacancyMapper.toVacancyDto(vacancy)).thenReturn(vacancyDto);
 
         VacancyDto result = vacancyService.getVacancy(1L);
 
         assertNotNull(result);
-        assertEquals(vacancyDto, result);
+        assertEquals(vacancy.getName(), result.name());
     }
 
     @Test
-    void getAllVacanciesSuccess() {
+    void findVacanciesWithFiltersShouldReturnFilteredVacancies() {
 
-        List<Vacancy> vacancies = Arrays.asList(vacancy);
-        List<VacancyDto> vacancyDtos = Arrays.asList(vacancyDto);
+        SearchDto searchDto = SearchDto.builder()
+                .description("Java")
+                .build();
+        Pageable pageable = PageRequest.of(0, 10);
+        when(vacancyRepository.findAll(any(Example.class), any(Pageable.class)))
+                .thenReturn(new PageImpl<>(List.of(vacancy)));
+        ;
 
-        when(vacancyRepository.findAll()).thenReturn(vacancies);
-        when(vacancyMapper.toVacancyDto(vacancy)).thenReturn(vacancyDto);
-
-        List<VacancyDto> result = vacancyService.getAllVacancies();
+        Page<VacancyDto> result = vacancyService.findVacancies(pageable, searchDto);
 
         assertNotNull(result);
-        assertEquals(1, result.size());
-        assertEquals(vacancyDtos, result);
+        assertEquals(1, result.getTotalElements());
+        assertEquals(vacancy.getName(), result.getContent().get(0).name());
     }
 
     @Test
-    void findVacancyByDescriptionAndPositionSuccess() {
+    void deleteVacancyValidIdShouldDeleteVacancy() {
 
-        String description = "Java";
-        TeamRole position = TeamRole.DEVELOPER;
-        List<Vacancy> vacancies = Arrays.asList(vacancy);
-        List<VacancyDto> vacancyDtos = Arrays.asList(vacancyDto);
-
-        when(vacancyRepository.findVacancyByFilters(description, position)).thenReturn(vacancies);
-        when(vacancyMapper.toVacancyDto(vacancy)).thenReturn(vacancyDto);
-
-        List<VacancyDto> result = vacancyService.findVacancyByDescriptionAndPosition(description, position);
-
-        assertNotNull(result);
-        assertEquals(1, result.size());
-        assertEquals(vacancyDtos, result);
-    }
-
-    @Test
-    void deleteVacancySuccess() {
-
-        when(userContext.getUserId()).thenReturn(123L);
         when(vacancyRepository.getByIdOrThrow(1L)).thenReturn(vacancy);
-        when(teamMemberRepository.findByUserIdAndProjectId(123L, 1L)).thenReturn(teamMember);
+        when(teamMemberRepository.findByUserIdAndProjectId(anyLong(), anyLong())).thenReturn(author);
 
         vacancyService.deleteVacancy(1L);
 
-        verify(vacancyValidator).validateRole(teamMember);
         verify(vacancyRepository).deleteById(1L);
     }
 }
